package snakes_n_ladders_sim.simulation.match.entities;

import snakes_n_ladders_sim.simulation.mediator.Component;

public class Board extends Component {

}
